app/compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIVIDE
    MINUS
    PATTERN
    PERCENT
    PLUS

Grammar

Rule 0     S' -> start
Rule 1     start -> select
Rule 2     start -> insert
Rule 3     start -> update
Rule 4     start -> delete
Rule 5     start -> run
Rule 6     start -> train
Rule 7     empty -> <empty>
Rule 8     select -> SELECT select_columns INTO DATASOURCE FROM DATASOURCE USING MODEL EQUAL DATASOURCE AND FRAMEDIR EQUAL DATASOURCE
Rule 9     train -> TRAIN INTO DATASOURCE FROM DATASOURCE WHERE MODEL EQUAL MODELNAME
Rule 10    select -> SELECT distinct select_columns FROM DATASOURCE into where order limit SIMICOLON
Rule 11    insert -> INSERT INTO DATASOURCE icolumn VALUES insert_values SIMICOLON
Rule 12    update -> UPDATE DATASOURCE SET assigns where SIMICOLON
Rule 13    delete -> DELETE FROM DATASOURCE where
Rule 14    logical -> EQUAL
Rule 15    logical -> NOTEQUAL
Rule 16    logical -> BIGGER_EQUAL
Rule 17    logical -> BIGGER
Rule 18    logical -> SMALLER_EQUAL
Rule 19    logical -> SMALLER
Rule 20    where -> WHERE conditions
Rule 21    where -> empty
Rule 22    conditions -> LPAREN conditions RPAREN
Rule 23    conditions -> conditions AND conditions
Rule 24    conditions -> conditions OR conditions
Rule 25    conditions -> exp LIKE STRING
Rule 26    conditions -> exp logical exp
Rule 27    conditions -> NOT conditions
Rule 28    exp -> STRING
Rule 29    exp -> COLNAME
Rule 30    exp -> NUMBER
Rule 31    distinct -> DISTINCT
Rule 32    distinct -> empty
Rule 33    column -> COLNUMBER
Rule 34    column -> COLNAME
Rule 35    columns -> columns COMMA columns
Rule 36    columns -> column
Rule 37    select_columns -> TIMES
Rule 38    select_columns -> COLNAME
Rule 39    into -> INTO DATASOURCE
Rule 40    into -> empty
Rule 41    order -> ORDER BY column way
Rule 42    order -> empty
Rule 43    way -> ASC
Rule 44    way -> empty
Rule 45    way -> DESC
Rule 46    limit -> LIMIT NUMBER
Rule 47    limit -> empty
Rule 48    value -> STRING
Rule 49    value -> NUMBER
Rule 50    values -> values COMMA values
Rule 51    values -> value
Rule 52    single_values -> LPAREN values RPAREN
Rule 53    insert_values -> insert_values COMMA insert_values
Rule 54    insert_values -> single_values
Rule 55    icolumn -> LPAREN columns RPAREN
Rule 56    icolumn -> empty
Rule 57    assign -> column EQUAL value
Rule 58    assigns -> assign COMMA assigns
Rule 59    assigns -> assign
Rule 60    run -> RUN DATASOURCE

Terminals, with rules where they appear

AND                  : 8 23
ASC                  : 43
BIGGER               : 17
BIGGER_EQUAL         : 16
BY                   : 41
COLNAME              : 29 34 38
COLNUMBER            : 33
COMMA                : 35 50 53 58
DATASOURCE           : 8 8 8 8 9 9 10 11 12 13 39 60
DELETE               : 13
DESC                 : 45
DISTINCT             : 31
DIVIDE               : 
EQUAL                : 8 8 9 14 57
FRAMEDIR             : 8
FROM                 : 8 9 10 13
INSERT               : 11
INTO                 : 8 9 11 39
LIKE                 : 25
LIMIT                : 46
LPAREN               : 22 52 55
MINUS                : 
MODEL                : 8 9
MODELNAME            : 9
NOT                  : 27
NOTEQUAL             : 15
NUMBER               : 30 46 49
OR                   : 24
ORDER                : 41
PATTERN              : 
PERCENT              : 
PLUS                 : 
RPAREN               : 22 52 55
RUN                  : 60
SELECT               : 8 10
SET                  : 12
SIMICOLON            : 10 11 12
SMALLER              : 19
SMALLER_EQUAL        : 18
STRING               : 25 28 48
TIMES                : 37
TRAIN                : 9
UPDATE               : 12
USING                : 8
VALUES               : 11
WHERE                : 9 20
error                : 

Nonterminals, with rules where they appear

assign               : 58 59
assigns              : 12 58
column               : 36 41 57
columns              : 35 35 55
conditions           : 20 22 23 23 24 24 27
delete               : 4
distinct             : 10
empty                : 21 32 40 42 44 47 56
exp                  : 25 26 26
icolumn              : 11
insert               : 2
insert_values        : 11 53 53
into                 : 10
limit                : 10
logical              : 26
order                : 10
run                  : 5
select               : 1
select_columns       : 8 10
single_values        : 54
start                : 0
train                : 6
update               : 3
value                : 51 57
values               : 50 50 52
way                  : 41
where                : 10 12 13

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . select
    (2) start -> . insert
    (3) start -> . update
    (4) start -> . delete
    (5) start -> . run
    (6) start -> . train
    (8) select -> . SELECT select_columns INTO DATASOURCE FROM DATASOURCE USING MODEL EQUAL DATASOURCE AND FRAMEDIR EQUAL DATASOURCE
    (10) select -> . SELECT distinct select_columns FROM DATASOURCE into where order limit SIMICOLON
    (11) insert -> . INSERT INTO DATASOURCE icolumn VALUES insert_values SIMICOLON
    (12) update -> . UPDATE DATASOURCE SET assigns where SIMICOLON
    (13) delete -> . DELETE FROM DATASOURCE where
    (60) run -> . RUN DATASOURCE
    (9) train -> . TRAIN INTO DATASOURCE FROM DATASOURCE WHERE MODEL EQUAL MODELNAME

    SELECT          shift and go to state 8
    INSERT          shift and go to state 9
    UPDATE          shift and go to state 10
    DELETE          shift and go to state 11
    RUN             shift and go to state 12
    TRAIN           shift and go to state 13

    start                          shift and go to state 1
    select                         shift and go to state 2
    insert                         shift and go to state 3
    update                         shift and go to state 4
    delete                         shift and go to state 5
    run                            shift and go to state 6
    train                          shift and go to state 7

state 1

    (0) S' -> start .



state 2

    (1) start -> select .

    $end            reduce using rule 1 (start -> select .)


state 3

    (2) start -> insert .

    $end            reduce using rule 2 (start -> insert .)


state 4

    (3) start -> update .

    $end            reduce using rule 3 (start -> update .)


state 5

    (4) start -> delete .

    $end            reduce using rule 4 (start -> delete .)


state 6

    (5) start -> run .

    $end            reduce using rule 5 (start -> run .)


state 7

    (6) start -> train .

    $end            reduce using rule 6 (start -> train .)


state 8

    (8) select -> SELECT . select_columns INTO DATASOURCE FROM DATASOURCE USING MODEL EQUAL DATASOURCE AND FRAMEDIR EQUAL DATASOURCE
    (10) select -> SELECT . distinct select_columns FROM DATASOURCE into where order limit SIMICOLON
    (37) select_columns -> . TIMES
    (38) select_columns -> . COLNAME
    (31) distinct -> . DISTINCT
    (32) distinct -> . empty
    (7) empty -> .

  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for COLNAME resolved as shift
    TIMES           shift and go to state 16
    COLNAME         shift and go to state 17
    DISTINCT        shift and go to state 18

  ! TIMES           [ reduce using rule 7 (empty -> .) ]
  ! COLNAME         [ reduce using rule 7 (empty -> .) ]

    select_columns                 shift and go to state 14
    distinct                       shift and go to state 15
    empty                          shift and go to state 19

state 9

    (11) insert -> INSERT . INTO DATASOURCE icolumn VALUES insert_values SIMICOLON

    INTO            shift and go to state 20


state 10

    (12) update -> UPDATE . DATASOURCE SET assigns where SIMICOLON

    DATASOURCE      shift and go to state 21


state 11

    (13) delete -> DELETE . FROM DATASOURCE where

    FROM            shift and go to state 22


state 12

    (60) run -> RUN . DATASOURCE

    DATASOURCE      shift and go to state 23


state 13

    (9) train -> TRAIN . INTO DATASOURCE FROM DATASOURCE WHERE MODEL EQUAL MODELNAME

    INTO            shift and go to state 24


state 14

    (8) select -> SELECT select_columns . INTO DATASOURCE FROM DATASOURCE USING MODEL EQUAL DATASOURCE AND FRAMEDIR EQUAL DATASOURCE

    INTO            shift and go to state 25


state 15

    (10) select -> SELECT distinct . select_columns FROM DATASOURCE into where order limit SIMICOLON
    (37) select_columns -> . TIMES
    (38) select_columns -> . COLNAME

    TIMES           shift and go to state 16
    COLNAME         shift and go to state 17

    select_columns                 shift and go to state 26

state 16

    (37) select_columns -> TIMES .

    INTO            reduce using rule 37 (select_columns -> TIMES .)
    FROM            reduce using rule 37 (select_columns -> TIMES .)


state 17

    (38) select_columns -> COLNAME .

    INTO            reduce using rule 38 (select_columns -> COLNAME .)
    FROM            reduce using rule 38 (select_columns -> COLNAME .)


state 18

    (31) distinct -> DISTINCT .

    TIMES           reduce using rule 31 (distinct -> DISTINCT .)
    COLNAME         reduce using rule 31 (distinct -> DISTINCT .)


state 19

    (32) distinct -> empty .

    TIMES           reduce using rule 32 (distinct -> empty .)
    COLNAME         reduce using rule 32 (distinct -> empty .)


state 20

    (11) insert -> INSERT INTO . DATASOURCE icolumn VALUES insert_values SIMICOLON

    DATASOURCE      shift and go to state 27


state 21

    (12) update -> UPDATE DATASOURCE . SET assigns where SIMICOLON

    SET             shift and go to state 28


state 22

    (13) delete -> DELETE FROM . DATASOURCE where

    DATASOURCE      shift and go to state 29


state 23

    (60) run -> RUN DATASOURCE .

    $end            reduce using rule 60 (run -> RUN DATASOURCE .)


state 24

    (9) train -> TRAIN INTO . DATASOURCE FROM DATASOURCE WHERE MODEL EQUAL MODELNAME

    DATASOURCE      shift and go to state 30


state 25

    (8) select -> SELECT select_columns INTO . DATASOURCE FROM DATASOURCE USING MODEL EQUAL DATASOURCE AND FRAMEDIR EQUAL DATASOURCE

    DATASOURCE      shift and go to state 31


state 26

    (10) select -> SELECT distinct select_columns . FROM DATASOURCE into where order limit SIMICOLON

    FROM            shift and go to state 32


state 27

    (11) insert -> INSERT INTO DATASOURCE . icolumn VALUES insert_values SIMICOLON
    (55) icolumn -> . LPAREN columns RPAREN
    (56) icolumn -> . empty
    (7) empty -> .

    LPAREN          shift and go to state 34
    VALUES          reduce using rule 7 (empty -> .)

    icolumn                        shift and go to state 33
    empty                          shift and go to state 35

state 28

    (12) update -> UPDATE DATASOURCE SET . assigns where SIMICOLON
    (58) assigns -> . assign COMMA assigns
    (59) assigns -> . assign
    (57) assign -> . column EQUAL value
    (33) column -> . COLNUMBER
    (34) column -> . COLNAME

    COLNUMBER       shift and go to state 39
    COLNAME         shift and go to state 40

    assigns                        shift and go to state 36
    assign                         shift and go to state 37
    column                         shift and go to state 38

state 29

    (13) delete -> DELETE FROM DATASOURCE . where
    (20) where -> . WHERE conditions
    (21) where -> . empty
    (7) empty -> .

    WHERE           shift and go to state 42
    $end            reduce using rule 7 (empty -> .)

    where                          shift and go to state 41
    empty                          shift and go to state 43

state 30

    (9) train -> TRAIN INTO DATASOURCE . FROM DATASOURCE WHERE MODEL EQUAL MODELNAME

    FROM            shift and go to state 44


state 31

    (8) select -> SELECT select_columns INTO DATASOURCE . FROM DATASOURCE USING MODEL EQUAL DATASOURCE AND FRAMEDIR EQUAL DATASOURCE

    FROM            shift and go to state 45


state 32

    (10) select -> SELECT distinct select_columns FROM . DATASOURCE into where order limit SIMICOLON

    DATASOURCE      shift and go to state 46


state 33

    (11) insert -> INSERT INTO DATASOURCE icolumn . VALUES insert_values SIMICOLON

    VALUES          shift and go to state 47


state 34

    (55) icolumn -> LPAREN . columns RPAREN
    (35) columns -> . columns COMMA columns
    (36) columns -> . column
    (33) column -> . COLNUMBER
    (34) column -> . COLNAME

    COLNUMBER       shift and go to state 39
    COLNAME         shift and go to state 40

    columns                        shift and go to state 48
    column                         shift and go to state 49

state 35

    (56) icolumn -> empty .

    VALUES          reduce using rule 56 (icolumn -> empty .)


state 36

    (12) update -> UPDATE DATASOURCE SET assigns . where SIMICOLON
    (20) where -> . WHERE conditions
    (21) where -> . empty
    (7) empty -> .

    WHERE           shift and go to state 42
    SIMICOLON       reduce using rule 7 (empty -> .)

    where                          shift and go to state 50
    empty                          shift and go to state 43

state 37

    (58) assigns -> assign . COMMA assigns
    (59) assigns -> assign .

    COMMA           shift and go to state 51
    WHERE           reduce using rule 59 (assigns -> assign .)
    SIMICOLON       reduce using rule 59 (assigns -> assign .)


state 38

    (57) assign -> column . EQUAL value

    EQUAL           shift and go to state 52


state 39

    (33) column -> COLNUMBER .

    EQUAL           reduce using rule 33 (column -> COLNUMBER .)
    RPAREN          reduce using rule 33 (column -> COLNUMBER .)
    COMMA           reduce using rule 33 (column -> COLNUMBER .)
    ASC             reduce using rule 33 (column -> COLNUMBER .)
    DESC            reduce using rule 33 (column -> COLNUMBER .)
    LIMIT           reduce using rule 33 (column -> COLNUMBER .)
    SIMICOLON       reduce using rule 33 (column -> COLNUMBER .)


state 40

    (34) column -> COLNAME .

    EQUAL           reduce using rule 34 (column -> COLNAME .)
    RPAREN          reduce using rule 34 (column -> COLNAME .)
    COMMA           reduce using rule 34 (column -> COLNAME .)
    ASC             reduce using rule 34 (column -> COLNAME .)
    DESC            reduce using rule 34 (column -> COLNAME .)
    LIMIT           reduce using rule 34 (column -> COLNAME .)
    SIMICOLON       reduce using rule 34 (column -> COLNAME .)


state 41

    (13) delete -> DELETE FROM DATASOURCE where .

    $end            reduce using rule 13 (delete -> DELETE FROM DATASOURCE where .)


state 42

    (20) where -> WHERE . conditions
    (22) conditions -> . LPAREN conditions RPAREN
    (23) conditions -> . conditions AND conditions
    (24) conditions -> . conditions OR conditions
    (25) conditions -> . exp LIKE STRING
    (26) conditions -> . exp logical exp
    (27) conditions -> . NOT conditions
    (28) exp -> . STRING
    (29) exp -> . COLNAME
    (30) exp -> . NUMBER

    LPAREN          shift and go to state 54
    NOT             shift and go to state 57
    STRING          shift and go to state 56
    COLNAME         shift and go to state 58
    NUMBER          shift and go to state 59

    conditions                     shift and go to state 53
    exp                            shift and go to state 55

state 43

    (21) where -> empty .

    $end            reduce using rule 21 (where -> empty .)
    SIMICOLON       reduce using rule 21 (where -> empty .)
    ORDER           reduce using rule 21 (where -> empty .)
    LIMIT           reduce using rule 21 (where -> empty .)


state 44

    (9) train -> TRAIN INTO DATASOURCE FROM . DATASOURCE WHERE MODEL EQUAL MODELNAME

    DATASOURCE      shift and go to state 60


state 45

    (8) select -> SELECT select_columns INTO DATASOURCE FROM . DATASOURCE USING MODEL EQUAL DATASOURCE AND FRAMEDIR EQUAL DATASOURCE

    DATASOURCE      shift and go to state 61


state 46

    (10) select -> SELECT distinct select_columns FROM DATASOURCE . into where order limit SIMICOLON
    (39) into -> . INTO DATASOURCE
    (40) into -> . empty
    (7) empty -> .

    INTO            shift and go to state 63
    WHERE           reduce using rule 7 (empty -> .)
    ORDER           reduce using rule 7 (empty -> .)
    LIMIT           reduce using rule 7 (empty -> .)
    SIMICOLON       reduce using rule 7 (empty -> .)

    into                           shift and go to state 62
    empty                          shift and go to state 64

state 47

    (11) insert -> INSERT INTO DATASOURCE icolumn VALUES . insert_values SIMICOLON
    (53) insert_values -> . insert_values COMMA insert_values
    (54) insert_values -> . single_values
    (52) single_values -> . LPAREN values RPAREN

    LPAREN          shift and go to state 67

    insert_values                  shift and go to state 65
    single_values                  shift and go to state 66

state 48

    (55) icolumn -> LPAREN columns . RPAREN
    (35) columns -> columns . COMMA columns

    RPAREN          shift and go to state 68
    COMMA           shift and go to state 69


state 49

    (36) columns -> column .

    RPAREN          reduce using rule 36 (columns -> column .)
    COMMA           reduce using rule 36 (columns -> column .)


state 50

    (12) update -> UPDATE DATASOURCE SET assigns where . SIMICOLON

    SIMICOLON       shift and go to state 70


state 51

    (58) assigns -> assign COMMA . assigns
    (58) assigns -> . assign COMMA assigns
    (59) assigns -> . assign
    (57) assign -> . column EQUAL value
    (33) column -> . COLNUMBER
    (34) column -> . COLNAME

    COLNUMBER       shift and go to state 39
    COLNAME         shift and go to state 40

    assign                         shift and go to state 37
    assigns                        shift and go to state 71
    column                         shift and go to state 38

state 52

    (57) assign -> column EQUAL . value
    (48) value -> . STRING
    (49) value -> . NUMBER

    STRING          shift and go to state 73
    NUMBER          shift and go to state 74

    value                          shift and go to state 72

state 53

    (20) where -> WHERE conditions .
    (23) conditions -> conditions . AND conditions
    (24) conditions -> conditions . OR conditions

    $end            reduce using rule 20 (where -> WHERE conditions .)
    SIMICOLON       reduce using rule 20 (where -> WHERE conditions .)
    ORDER           reduce using rule 20 (where -> WHERE conditions .)
    LIMIT           reduce using rule 20 (where -> WHERE conditions .)
    AND             shift and go to state 75
    OR              shift and go to state 76


state 54

    (22) conditions -> LPAREN . conditions RPAREN
    (22) conditions -> . LPAREN conditions RPAREN
    (23) conditions -> . conditions AND conditions
    (24) conditions -> . conditions OR conditions
    (25) conditions -> . exp LIKE STRING
    (26) conditions -> . exp logical exp
    (27) conditions -> . NOT conditions
    (28) exp -> . STRING
    (29) exp -> . COLNAME
    (30) exp -> . NUMBER

    LPAREN          shift and go to state 54
    NOT             shift and go to state 57
    STRING          shift and go to state 56
    COLNAME         shift and go to state 58
    NUMBER          shift and go to state 59

    conditions                     shift and go to state 77
    exp                            shift and go to state 55

state 55

    (25) conditions -> exp . LIKE STRING
    (26) conditions -> exp . logical exp
    (14) logical -> . EQUAL
    (15) logical -> . NOTEQUAL
    (16) logical -> . BIGGER_EQUAL
    (17) logical -> . BIGGER
    (18) logical -> . SMALLER_EQUAL
    (19) logical -> . SMALLER

    LIKE            shift and go to state 78
    EQUAL           shift and go to state 80
    NOTEQUAL        shift and go to state 81
    BIGGER_EQUAL    shift and go to state 82
    BIGGER          shift and go to state 83
    SMALLER_EQUAL   shift and go to state 84
    SMALLER         shift and go to state 85

    logical                        shift and go to state 79

state 56

    (28) exp -> STRING .

    LIKE            reduce using rule 28 (exp -> STRING .)
    EQUAL           reduce using rule 28 (exp -> STRING .)
    NOTEQUAL        reduce using rule 28 (exp -> STRING .)
    BIGGER_EQUAL    reduce using rule 28 (exp -> STRING .)
    BIGGER          reduce using rule 28 (exp -> STRING .)
    SMALLER_EQUAL   reduce using rule 28 (exp -> STRING .)
    SMALLER         reduce using rule 28 (exp -> STRING .)
    AND             reduce using rule 28 (exp -> STRING .)
    OR              reduce using rule 28 (exp -> STRING .)
    $end            reduce using rule 28 (exp -> STRING .)
    SIMICOLON       reduce using rule 28 (exp -> STRING .)
    ORDER           reduce using rule 28 (exp -> STRING .)
    LIMIT           reduce using rule 28 (exp -> STRING .)
    RPAREN          reduce using rule 28 (exp -> STRING .)


state 57

    (27) conditions -> NOT . conditions
    (22) conditions -> . LPAREN conditions RPAREN
    (23) conditions -> . conditions AND conditions
    (24) conditions -> . conditions OR conditions
    (25) conditions -> . exp LIKE STRING
    (26) conditions -> . exp logical exp
    (27) conditions -> . NOT conditions
    (28) exp -> . STRING
    (29) exp -> . COLNAME
    (30) exp -> . NUMBER

    LPAREN          shift and go to state 54
    NOT             shift and go to state 57
    STRING          shift and go to state 56
    COLNAME         shift and go to state 58
    NUMBER          shift and go to state 59

    conditions                     shift and go to state 86
    exp                            shift and go to state 55

state 58

    (29) exp -> COLNAME .

    LIKE            reduce using rule 29 (exp -> COLNAME .)
    EQUAL           reduce using rule 29 (exp -> COLNAME .)
    NOTEQUAL        reduce using rule 29 (exp -> COLNAME .)
    BIGGER_EQUAL    reduce using rule 29 (exp -> COLNAME .)
    BIGGER          reduce using rule 29 (exp -> COLNAME .)
    SMALLER_EQUAL   reduce using rule 29 (exp -> COLNAME .)
    SMALLER         reduce using rule 29 (exp -> COLNAME .)
    AND             reduce using rule 29 (exp -> COLNAME .)
    OR              reduce using rule 29 (exp -> COLNAME .)
    $end            reduce using rule 29 (exp -> COLNAME .)
    SIMICOLON       reduce using rule 29 (exp -> COLNAME .)
    ORDER           reduce using rule 29 (exp -> COLNAME .)
    LIMIT           reduce using rule 29 (exp -> COLNAME .)
    RPAREN          reduce using rule 29 (exp -> COLNAME .)


state 59

    (30) exp -> NUMBER .

    LIKE            reduce using rule 30 (exp -> NUMBER .)
    EQUAL           reduce using rule 30 (exp -> NUMBER .)
    NOTEQUAL        reduce using rule 30 (exp -> NUMBER .)
    BIGGER_EQUAL    reduce using rule 30 (exp -> NUMBER .)
    BIGGER          reduce using rule 30 (exp -> NUMBER .)
    SMALLER_EQUAL   reduce using rule 30 (exp -> NUMBER .)
    SMALLER         reduce using rule 30 (exp -> NUMBER .)
    AND             reduce using rule 30 (exp -> NUMBER .)
    OR              reduce using rule 30 (exp -> NUMBER .)
    $end            reduce using rule 30 (exp -> NUMBER .)
    SIMICOLON       reduce using rule 30 (exp -> NUMBER .)
    ORDER           reduce using rule 30 (exp -> NUMBER .)
    LIMIT           reduce using rule 30 (exp -> NUMBER .)
    RPAREN          reduce using rule 30 (exp -> NUMBER .)


state 60

    (9) train -> TRAIN INTO DATASOURCE FROM DATASOURCE . WHERE MODEL EQUAL MODELNAME

    WHERE           shift and go to state 87


state 61

    (8) select -> SELECT select_columns INTO DATASOURCE FROM DATASOURCE . USING MODEL EQUAL DATASOURCE AND FRAMEDIR EQUAL DATASOURCE

    USING           shift and go to state 88


state 62

    (10) select -> SELECT distinct select_columns FROM DATASOURCE into . where order limit SIMICOLON
    (20) where -> . WHERE conditions
    (21) where -> . empty
    (7) empty -> .

    WHERE           shift and go to state 42
    ORDER           reduce using rule 7 (empty -> .)
    LIMIT           reduce using rule 7 (empty -> .)
    SIMICOLON       reduce using rule 7 (empty -> .)

    where                          shift and go to state 89
    empty                          shift and go to state 43

state 63

    (39) into -> INTO . DATASOURCE

    DATASOURCE      shift and go to state 90


state 64

    (40) into -> empty .

    WHERE           reduce using rule 40 (into -> empty .)
    ORDER           reduce using rule 40 (into -> empty .)
    LIMIT           reduce using rule 40 (into -> empty .)
    SIMICOLON       reduce using rule 40 (into -> empty .)


state 65

    (11) insert -> INSERT INTO DATASOURCE icolumn VALUES insert_values . SIMICOLON
    (53) insert_values -> insert_values . COMMA insert_values

    SIMICOLON       shift and go to state 91
    COMMA           shift and go to state 92


state 66

    (54) insert_values -> single_values .

    SIMICOLON       reduce using rule 54 (insert_values -> single_values .)
    COMMA           reduce using rule 54 (insert_values -> single_values .)


state 67

    (52) single_values -> LPAREN . values RPAREN
    (50) values -> . values COMMA values
    (51) values -> . value
    (48) value -> . STRING
    (49) value -> . NUMBER

    STRING          shift and go to state 73
    NUMBER          shift and go to state 74

    values                         shift and go to state 93
    value                          shift and go to state 94

state 68

    (55) icolumn -> LPAREN columns RPAREN .

    VALUES          reduce using rule 55 (icolumn -> LPAREN columns RPAREN .)


state 69

    (35) columns -> columns COMMA . columns
    (35) columns -> . columns COMMA columns
    (36) columns -> . column
    (33) column -> . COLNUMBER
    (34) column -> . COLNAME

    COLNUMBER       shift and go to state 39
    COLNAME         shift and go to state 40

    columns                        shift and go to state 95
    column                         shift and go to state 49

state 70

    (12) update -> UPDATE DATASOURCE SET assigns where SIMICOLON .

    $end            reduce using rule 12 (update -> UPDATE DATASOURCE SET assigns where SIMICOLON .)


state 71

    (58) assigns -> assign COMMA assigns .

    WHERE           reduce using rule 58 (assigns -> assign COMMA assigns .)
    SIMICOLON       reduce using rule 58 (assigns -> assign COMMA assigns .)


state 72

    (57) assign -> column EQUAL value .

    COMMA           reduce using rule 57 (assign -> column EQUAL value .)
    WHERE           reduce using rule 57 (assign -> column EQUAL value .)
    SIMICOLON       reduce using rule 57 (assign -> column EQUAL value .)


state 73

    (48) value -> STRING .

    COMMA           reduce using rule 48 (value -> STRING .)
    WHERE           reduce using rule 48 (value -> STRING .)
    SIMICOLON       reduce using rule 48 (value -> STRING .)
    RPAREN          reduce using rule 48 (value -> STRING .)


state 74

    (49) value -> NUMBER .

    COMMA           reduce using rule 49 (value -> NUMBER .)
    WHERE           reduce using rule 49 (value -> NUMBER .)
    SIMICOLON       reduce using rule 49 (value -> NUMBER .)
    RPAREN          reduce using rule 49 (value -> NUMBER .)


state 75

    (23) conditions -> conditions AND . conditions
    (22) conditions -> . LPAREN conditions RPAREN
    (23) conditions -> . conditions AND conditions
    (24) conditions -> . conditions OR conditions
    (25) conditions -> . exp LIKE STRING
    (26) conditions -> . exp logical exp
    (27) conditions -> . NOT conditions
    (28) exp -> . STRING
    (29) exp -> . COLNAME
    (30) exp -> . NUMBER

    LPAREN          shift and go to state 54
    NOT             shift and go to state 57
    STRING          shift and go to state 56
    COLNAME         shift and go to state 58
    NUMBER          shift and go to state 59

    conditions                     shift and go to state 96
    exp                            shift and go to state 55

state 76

    (24) conditions -> conditions OR . conditions
    (22) conditions -> . LPAREN conditions RPAREN
    (23) conditions -> . conditions AND conditions
    (24) conditions -> . conditions OR conditions
    (25) conditions -> . exp LIKE STRING
    (26) conditions -> . exp logical exp
    (27) conditions -> . NOT conditions
    (28) exp -> . STRING
    (29) exp -> . COLNAME
    (30) exp -> . NUMBER

    LPAREN          shift and go to state 54
    NOT             shift and go to state 57
    STRING          shift and go to state 56
    COLNAME         shift and go to state 58
    NUMBER          shift and go to state 59

    conditions                     shift and go to state 97
    exp                            shift and go to state 55

state 77

    (22) conditions -> LPAREN conditions . RPAREN
    (23) conditions -> conditions . AND conditions
    (24) conditions -> conditions . OR conditions

    RPAREN          shift and go to state 98
    AND             shift and go to state 75
    OR              shift and go to state 76


state 78

    (25) conditions -> exp LIKE . STRING

    STRING          shift and go to state 99


state 79

    (26) conditions -> exp logical . exp
    (28) exp -> . STRING
    (29) exp -> . COLNAME
    (30) exp -> . NUMBER

    STRING          shift and go to state 56
    COLNAME         shift and go to state 58
    NUMBER          shift and go to state 59

    exp                            shift and go to state 100

state 80

    (14) logical -> EQUAL .

    STRING          reduce using rule 14 (logical -> EQUAL .)
    COLNAME         reduce using rule 14 (logical -> EQUAL .)
    NUMBER          reduce using rule 14 (logical -> EQUAL .)


state 81

    (15) logical -> NOTEQUAL .

    STRING          reduce using rule 15 (logical -> NOTEQUAL .)
    COLNAME         reduce using rule 15 (logical -> NOTEQUAL .)
    NUMBER          reduce using rule 15 (logical -> NOTEQUAL .)


state 82

    (16) logical -> BIGGER_EQUAL .

    STRING          reduce using rule 16 (logical -> BIGGER_EQUAL .)
    COLNAME         reduce using rule 16 (logical -> BIGGER_EQUAL .)
    NUMBER          reduce using rule 16 (logical -> BIGGER_EQUAL .)


state 83

    (17) logical -> BIGGER .

    STRING          reduce using rule 17 (logical -> BIGGER .)
    COLNAME         reduce using rule 17 (logical -> BIGGER .)
    NUMBER          reduce using rule 17 (logical -> BIGGER .)


state 84

    (18) logical -> SMALLER_EQUAL .

    STRING          reduce using rule 18 (logical -> SMALLER_EQUAL .)
    COLNAME         reduce using rule 18 (logical -> SMALLER_EQUAL .)
    NUMBER          reduce using rule 18 (logical -> SMALLER_EQUAL .)


state 85

    (19) logical -> SMALLER .

    STRING          reduce using rule 19 (logical -> SMALLER .)
    COLNAME         reduce using rule 19 (logical -> SMALLER .)
    NUMBER          reduce using rule 19 (logical -> SMALLER .)


state 86

    (27) conditions -> NOT conditions .
    (23) conditions -> conditions . AND conditions
    (24) conditions -> conditions . OR conditions

  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for OR resolved as shift
    $end            reduce using rule 27 (conditions -> NOT conditions .)
    SIMICOLON       reduce using rule 27 (conditions -> NOT conditions .)
    ORDER           reduce using rule 27 (conditions -> NOT conditions .)
    LIMIT           reduce using rule 27 (conditions -> NOT conditions .)
    RPAREN          reduce using rule 27 (conditions -> NOT conditions .)
    AND             shift and go to state 75
    OR              shift and go to state 76

  ! AND             [ reduce using rule 27 (conditions -> NOT conditions .) ]
  ! OR              [ reduce using rule 27 (conditions -> NOT conditions .) ]


state 87

    (9) train -> TRAIN INTO DATASOURCE FROM DATASOURCE WHERE . MODEL EQUAL MODELNAME

    MODEL           shift and go to state 101


state 88

    (8) select -> SELECT select_columns INTO DATASOURCE FROM DATASOURCE USING . MODEL EQUAL DATASOURCE AND FRAMEDIR EQUAL DATASOURCE

    MODEL           shift and go to state 102


state 89

    (10) select -> SELECT distinct select_columns FROM DATASOURCE into where . order limit SIMICOLON
    (41) order -> . ORDER BY column way
    (42) order -> . empty
    (7) empty -> .

    ORDER           shift and go to state 104
    LIMIT           reduce using rule 7 (empty -> .)
    SIMICOLON       reduce using rule 7 (empty -> .)

    order                          shift and go to state 103
    empty                          shift and go to state 105

state 90

    (39) into -> INTO DATASOURCE .

    WHERE           reduce using rule 39 (into -> INTO DATASOURCE .)
    ORDER           reduce using rule 39 (into -> INTO DATASOURCE .)
    LIMIT           reduce using rule 39 (into -> INTO DATASOURCE .)
    SIMICOLON       reduce using rule 39 (into -> INTO DATASOURCE .)


state 91

    (11) insert -> INSERT INTO DATASOURCE icolumn VALUES insert_values SIMICOLON .

    $end            reduce using rule 11 (insert -> INSERT INTO DATASOURCE icolumn VALUES insert_values SIMICOLON .)


state 92

    (53) insert_values -> insert_values COMMA . insert_values
    (53) insert_values -> . insert_values COMMA insert_values
    (54) insert_values -> . single_values
    (52) single_values -> . LPAREN values RPAREN

    LPAREN          shift and go to state 67

    insert_values                  shift and go to state 106
    single_values                  shift and go to state 66

state 93

    (52) single_values -> LPAREN values . RPAREN
    (50) values -> values . COMMA values

    RPAREN          shift and go to state 107
    COMMA           shift and go to state 108


state 94

    (51) values -> value .

    RPAREN          reduce using rule 51 (values -> value .)
    COMMA           reduce using rule 51 (values -> value .)


state 95

    (35) columns -> columns COMMA columns .
    (35) columns -> columns . COMMA columns

  ! shift/reduce conflict for COMMA resolved as shift
    RPAREN          reduce using rule 35 (columns -> columns COMMA columns .)
    COMMA           shift and go to state 69

  ! COMMA           [ reduce using rule 35 (columns -> columns COMMA columns .) ]


state 96

    (23) conditions -> conditions AND conditions .
    (23) conditions -> conditions . AND conditions
    (24) conditions -> conditions . OR conditions
